--- a/html/login.html
+++ b/html/login.html
@@ -44,7 +44,7 @@
 							<div class="center">
 								<h1>
 									<i class="ace-icon fa fa-leaf green"></i>
-									<span class="red">はなぶさcloud</span>
+									<span class="red">はなぶさ1</span>
 									<span class="white" id="id-text2">Cloud</span>
 								</h1>
 								<h4 class="blue" id="id-company-text">&copy; 2016 &nbsp;<a href="http://www.navc2.co.jp/" target="_blank">NAVC</a></h4>
